# council-of-claws

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json
.agents/skills/backend-audit/: SKILL.md
.agents/skills/coc-tool/: SKILL.md
.agents/skills/human-messenger/: SKILL.md
.github/workflows/: ci.yml
apps/backend/: .dockerignore  Cargo.toml  Dockerfile
apps/backend/migrations/: 20240418000000_initial_schema.sql  20240418000002_agents_and_audit.sql  20240418000003_batch5_updates.sql  20240418000004_clear_mocks.sql  20260420000005_openclaw_snapshots.sql
apps/backend/src/: audit.rs  config.rs  health.rs  main.rs  models.rs  obsidian_writer.rs  openclaw.rs  postgres_reader.rs  redis_mock.rs  redis_reader.rs  routes.rs  summary_builder.rs  websocket_hub.rs
apps/dashboard/: Dockerfile  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/gateway/: Dockerfile  server.js
docs/: architecture.md  deployment.md  schema.md
infra/compose/: docker-compose.remote-worker.yml  docker-compose.yml  schema.sql
scripts/coc-tool/: coc-tool
scripts/dev/: down.sh  export-state.sh  generate-secrets.sh  import-state.sh  post-start-notify.sh  post-start-verify.sh  preflight.sh  prepare-data-dirs.sh  prune.sh  send-mock-heartbeat.sh  set-env-value.sh  up.sh
scripts/smoke/: agent-backend-smoke.sh  compose-smoke.sh  docker-compose.internal-api-smoke.override.yml  e2e-flows.sh  gateway-config-smoke.sh  internal-api-smoke.sh  openclaw-runtime-smoke.sh  timezone-smoke.sh
(+34 files in other folders)
