[package]
name = "council-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & Async Runtime
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.10"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
futures = "0.3.31"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15"
json5 = "0.4"

# Database & Data
redis = { version = "0.32", features = ["aio", "tokio-comp", "connection-manager"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
config = "0.15"
humantime-serde = "1.1"

# Error Handling
thiserror = "2.0"
anyhow = "1.0.100"
hex = "0.4"
sha2 = "0.10"

# Logging
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Validation
validator = "0.20"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
rand = "0.8.6"
rand_core = "0.6.4"
